@@ -3680,10 +3680,6 @@ $ #Settings dialog: editor#
                           табуляции, переводы строк и возвраты 
                           кареток).
 
-  #Pick up the word#        При вызове диалога поиска/замены в строку
-                          поиска будет подставляться слово, на
-                          котором стоит курсор.
-
   #Select found#            Found text is selected
 
   #Курсор в конце#          Установить курсор в конец фрагмента,
