@@ -31,47 +31,49 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #include "compiler.hpp"
 
-#define _ADD_SUFFIX(s, suffix) s ## suffix
-#define ADD_SUFFIX(s, suffix) _ADD_SUFFIX(s, suffix)
+#define DETAIL_CONCATENATE_IMPL(s1, s2) s1 ## s2
+#define CONCATENATE(s1, s2) DETAIL_CONCATENATE_IMPL(s1, s2)
 
-#define _STD_DEFAULT_MUTATOR(Function) std::Function
-#define _STD_CONST_MUTATOR(Function) std::c##Function
-#define _STD_REVERSE_MUTATOR(Function) std::r##Function
-#define _STD_CONST_REVERSE_MUTATOR(Function) std::cr##Function
+#define ANONYMOUS_VARIABLE(str) CONCATENATE(str, __LINE__)
 
-
-#define _REFERENCE_IMPL(Object, MUTATOR_PARAM) decltype(*MUTATOR_PARAM(begin)(Object))
-
-#define REFERENCE(Object) _REFERENCE_IMPL(Object, _STD_DEFAULT_MUTATOR)
-#define CONST_REFERENCE(Object) _REFERENCE_IMPL(Object, _STD_CONST_MUTATOR)
+#define DETAIL_STD_DEFAULT_MUTATOR(Function) std::Function
+#define DETAIL_STD_CONST_MUTATOR(Function) std::c##Function
+#define DETAIL_STD_REVERSE_MUTATOR(Function) std::r##Function
+#define DETAIL_STD_CONST_REVERSE_MUTATOR(Function) std::cr##Function
 
 
-#define _VALUE_TYPE_IMPL(Object, REFERENCE_PARAM) std::remove_reference<REFERENCE_PARAM(Object)>::type
+#define DETAIL_REFERENCE_IMPL(Object, MUTATOR_PARAM) decltype(*MUTATOR_PARAM(begin)(Object))
 
-#define VALUE_TYPE(Object) _VALUE_TYPE_IMPL(Object, REFERENCE)
-#define CONST_VALUE_TYPE(Object) _VALUE_TYPE_IMPL(Object, CONST_REFERENCE)
-
-
-#define _ITERATOR_IMPL(Object, MUTATOR_PARAM) decltype(MUTATOR_PARAM(begin)(Object))
-
-#define ITERATOR(Object) _ITERATOR_IMPL(Object, _STD_DEFAULT_MUTATOR)
-#define CONST_ITERATOR(Object) _ITERATOR_IMPL(Object, _STD_CONST_MUTATOR)
-#define REVERSE_ITERATOR(Object) _ITERATOR_IMPL(Object, _STD_REVERSE_MUTATOR)
-#define CONST_REVERSE_ITERATOR(Object) _ITERATOR_IMPL(Object, _STD_CONST_REVERSE_MUTATOR)
+#define REFERENCE(Object) DETAIL_REFERENCE_IMPL(Object, DETAIL_STD_DEFAULT_MUTATOR)
+#define CONST_REFERENCE(Object) DETAIL_REFERENCE_IMPL(Object, DETAIL_STD_CONST_MUTATOR)
 
 
-#define _LAMBDA_PREDICATE_IMPL(Object, i, REFERENCE_PARAM, ...) [&](REFERENCE_PARAM(Object) i, ##__VA_ARGS__)
+#define DETAIL_VALUE_TYPE_IMPL(Object, REFERENCE_PARAM) std::remove_reference<REFERENCE_PARAM(Object)>::type
 
-#define LAMBDA_PREDICATE(Object, i, ...) _LAMBDA_PREDICATE_IMPL(Object, i, REFERENCE, ##__VA_ARGS__)
-#define CONST_LAMBDA_PREDICATE(Object, i, ...) _LAMBDA_PREDICATE_IMPL(Object, i, CONST_REFERENCE, ##__VA_ARGS__)
+#define VALUE_TYPE(Object) DETAIL_VALUE_TYPE_IMPL(Object, REFERENCE)
+#define CONST_VALUE_TYPE(Object) DETAIL_VALUE_TYPE_IMPL(Object, CONST_REFERENCE)
 
 
-#define _ALL_RANGE_IMPL(Object, MUTATOR_PARAM) MUTATOR_PARAM(begin)(Object), MUTATOR_PARAM(end)(Object)
+#define DETAIL_ITERATOR_IMPL(Object, MUTATOR_PARAM) decltype(MUTATOR_PARAM(begin)(Object))
 
-#define ALL_RANGE(Object) _ALL_RANGE_IMPL(Object, _STD_DEFAULT_MUTATOR)
-#define ALL_CONST_RANGE(Object) _ALL_RANGE_IMPL(Object, _STD_CONST_MUTATOR)
-#define ALL_REVERSE_RANGE(Object) _ALL_RANGE_IMPL(Object, _STD_REVERSE_MUTATOR)
-#define ALL_CONST_REVERSE_RANGE(Object) _ALL_RANGE_IMPL(Object, _STD_CONST_REVERSE_MUTATOR)
+#define ITERATOR(Object) DETAIL_ITERATOR_IMPL(Object, DETAIL_STD_DEFAULT_MUTATOR)
+#define CONST_ITERATOR(Object) DETAIL_ITERATOR_IMPL(Object, DETAIL_STD_CONST_MUTATOR)
+#define REVERSE_ITERATOR(Object) DETAIL_ITERATOR_IMPL(Object, DETAIL_STD_REVERSE_MUTATOR)
+#define CONST_REVERSE_ITERATOR(Object) DETAIL_ITERATOR_IMPL(Object, DETAIL_STD_CONST_REVERSE_MUTATOR)
+
+
+#define DETAIL_LAMBDA_PREDICATE_IMPL(Object, i, REFERENCE_PARAM, ...) [&](REFERENCE_PARAM(Object) i, ##__VA_ARGS__)
+
+#define LAMBDA_PREDICATE(Object, i, ...) DETAIL_LAMBDA_PREDICATE_IMPL(Object, i, REFERENCE, ##__VA_ARGS__)
+#define CONST_LAMBDA_PREDICATE(Object, i, ...) DETAIL_LAMBDA_PREDICATE_IMPL(Object, i, CONST_REFERENCE, ##__VA_ARGS__)
+
+
+#define DETAIL_ALL_RANGE_IMPL(Object, MUTATOR_PARAM) MUTATOR_PARAM(begin)(Object), MUTATOR_PARAM(end)(Object)
+
+#define ALL_RANGE(Object) DETAIL_ALL_RANGE_IMPL(Object, DETAIL_STD_DEFAULT_MUTATOR)
+#define ALL_CONST_RANGE(Object) DETAIL_ALL_RANGE_IMPL(Object, DETAIL_STD_CONST_MUTATOR)
+#define ALL_REVERSE_RANGE(Object) DETAIL_ALL_RANGE_IMPL(Object, DETAIL_STD_REVERSE_MUTATOR)
+#define ALL_CONST_REVERSE_RANGE(Object) DETAIL_ALL_RANGE_IMPL(Object, DETAIL_STD_CONST_REVERSE_MUTATOR)
 
 
 #define RANGE(Object, i, ...) ALL_RANGE(Object), LAMBDA_PREDICATE(Object, i, ##__VA_ARGS__)
@@ -80,12 +82,12 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #define CONST_REVERSE_RANGE(Object, i, ...) ALL_CONST_REVERSE_RANGE(Object), CONST_LAMBDA_PREDICATE(Object, i, ##__VA_ARGS__)
 
 
-#define _FOR_RANGE_IMPL(Object, i, MUTATOR_PARAM) for(auto i = MUTATOR_PARAM(begin)(Object), ADD_SUFFIX(end, __LINE__) = MUTATOR_PARAM(end)(Object); i != ADD_SUFFIX(end, __LINE__); ++i)
+#define DETAIL_FOR_RANGE_IMPL(Object, i, MUTATOR_PARAM) for(auto i = MUTATOR_PARAM(begin)(Object), CONCATENATE(end, __LINE__) = MUTATOR_PARAM(end)(Object); i != CONCATENATE(end, __LINE__); ++i)
 
-#define FOR_RANGE(Object, i) _FOR_RANGE_IMPL(Object, i, _STD_DEFAULT_MUTATOR)
-#define FOR_CONST_RANGE(Object, i) _FOR_RANGE_IMPL(Object, i, _STD_CONST_MUTATOR)
-#define FOR_REVERSE_RANGE(Object, i) _FOR_RANGE_IMPL(Object, i, _STD_REVERSE_MUTATOR)
-#define FOR_CONST_REVERSE_RANGE(Object, i) _FOR_RANGE_IMPL(Object, i, _STD_CONST_REVERSE_MUTATOR)
+#define FOR_RANGE(Object, i) DETAIL_FOR_RANGE_IMPL(Object, i, DETAIL_STD_DEFAULT_MUTATOR)
+#define FOR_CONST_RANGE(Object, i) DETAIL_FOR_RANGE_IMPL(Object, i, DETAIL_STD_CONST_MUTATOR)
+#define FOR_REVERSE_RANGE(Object, i) DETAIL_FOR_RANGE_IMPL(Object, i, DETAIL_STD_REVERSE_MUTATOR)
+#define FOR_CONST_REVERSE_RANGE(Object, i) DETAIL_FOR_RANGE_IMPL(Object, i, DETAIL_STD_CONST_REVERSE_MUTATOR)
 
 
 #define COPY_OPERATOR_BY_SWAP(Type) \
@@ -95,7 +97,7 @@ Type& operator=(const Type& rhs) { Type(rhs).swap(*this); return *this; }
 Type& operator=(Type&& rhs) noexcept { swap(rhs); return *this; }
 
 #define SCOPED_ACTION(RAII_type) \
-const RAII_type ADD_SUFFIX(scoped_object_, __LINE__)
+const RAII_type ANONYMOUS_VARIABLE(scoped_object_)
 
 #ifdef NO_DELETED_FUNCTIONS
 #define DELETED_FUNCTION(...) private: __VA_ARGS__
